--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,15 +1,13 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
-}
-.header ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1.5rem;
+
+  background-color: var(--gray-4);
 }
 
-.auth {
-  display: flex;
-  gap: 1rem;
+.header button {
+  white-space: nowrap;
 }
